Improve collision detection/handling